--- a/src/components/DisplayOptions/DisplayOptions.scss
+++ b/src/components/DisplayOptions/DisplayOptions.scss
@@ -72,67 +72,8 @@
       @include zorroa-square-btn-lighten(40px);
     }
 
-    /* The switch - the box around the slider */
-    .switch {
-      position: relative;
-      display: inline-block;
-      width: 30px;
-      height: 4px;
-    }
-
-    /* Hide default HTML checkbox */
-    .switch input {display:none;}
-
-    $animation-duration: 0.25s;
-
-    /* The slider */
-    .slider {
-      position: absolute;
-      cursor: pointer;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-color: $zorroa-gray;
-      -webkit-transition: $animation-duration;
-      transition: $animation-duration;
-    }
-
-    .slider:before {
-      position: absolute;
-      content: "";
-      height: 10px;
-      width: 10px;
-      left: 0;
-      bottom: -2.5px;
-      background-color: $zorroa-sickly-green;
-      box-shadow: 0px 0px 0px 2px black;
-      -webkit-transition: $animation-duration;
-      transition: $animation-duration;
-
-    }
-
-    input:checked + .slider {
-      background-color: $zorroa-sickly-green;
-    }
-
-    input:focus + .slider {
-      box-shadow: 0 0 1px $zorroa-sickly-green;
-    }
-
-    input:checked + .slider:before {
-      -webkit-transform: translateX(26px);
-      -ms-transform: translateX(26px);
-      transform: translateX(26px);
-    }
-
-    /* Rounded sliders */
-    .slider.round {
-      border-radius: 34px;
-    }
-
-    .slider.round:before {
-      border-radius: 50%;
+    .Toggle-slider:before {
+      box-shadow: 0px 0px 0px 1px black;
     }
   }
 
