--- a/src/components/Racetrack/Map.scss
+++ b/src/components/Racetrack/Map.scss
@@ -34,6 +34,20 @@
     @include noSelect;
   }
 
+  .Map-header-label {
+    @include flexRow;
+    @include flexAlignItemsCenter;
+  }
+
+  .Map-header-title {
+    font-weight: 100;
+    margin-right: 4px;
+  }
+
+  .Map-header-field {
+    font-weight: 400;
+  }
+
   .selected-term {
     position: absolute;
     top: 44px;
