--- a/src/components/Racetrack/WidgetHeader.scss
+++ b/src/components/Racetrack/WidgetHeader.scss
@@ -32,7 +32,8 @@
 
 .WidgetHeader-icon {
   @include zorroa-square-icon(40px);
-  font-size: 20px;
+  font-size: 24px;
+  opacity: 0.5;
 }
 
 .WidgetHeader-label {
