--- a/src/assets/fonts/zorroa-icons/style.css
+++ b/src/assets/fonts/zorroa-icons/style.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'zorroa-icons';
-  src:  url('fonts/zorroa-icons.eot?c7fe5n');
-  src:  url('fonts/zorroa-icons.eot?c7fe5n#iefix') format('embedded-opentype'),
-    url('fonts/zorroa-icons.woff2?c7fe5n') format('woff2'),
-    url('fonts/zorroa-icons.ttf?c7fe5n') format('truetype'),
-    url('fonts/zorroa-icons.woff?c7fe5n') format('woff'),
-    url('fonts/zorroa-icons.svg?c7fe5n#zorroa-icons') format('svg');
+  src:  url('fonts/zorroa-icons.eot?u8r0jz');
+  src:  url('fonts/zorroa-icons.eot?u8r0jz#iefix') format('embedded-opentype'),
+    url('fonts/zorroa-icons.woff2?u8r0jz') format('woff2'),
+    url('fonts/zorroa-icons.ttf?u8r0jz') format('truetype'),
+    url('fonts/zorroa-icons.woff?u8r0jz') format('woff'),
+    url('fonts/zorroa-icons.svg?u8r0jz#zorroa-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -30,6 +30,9 @@
 }
 .icon-plus2:before {
   content: "\e928";
+}
+.icon-brokenegg:before {
+  content: "\e95f";
 }
 .icon-doublearrows:before {
   content: "\e95d";
