--- a/src/assets/fonts/zorroa-icons/style.css
+++ b/src/assets/fonts/zorroa-icons/style.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'zorroa-icons';
-  src:  url('fonts/zorroa-icons.eot?u8r0jz');
-  src:  url('fonts/zorroa-icons.eot?u8r0jz#iefix') format('embedded-opentype'),
-    url('fonts/zorroa-icons.woff2?u8r0jz') format('woff2'),
-    url('fonts/zorroa-icons.ttf?u8r0jz') format('truetype'),
-    url('fonts/zorroa-icons.woff?u8r0jz') format('woff'),
-    url('fonts/zorroa-icons.svg?u8r0jz#zorroa-icons') format('svg');
+  src:  url('fonts/zorroa-icons.eot?oz8qsv');
+  src:  url('fonts/zorroa-icons.eot?oz8qsv#iefix') format('embedded-opentype'),
+    url('fonts/zorroa-icons.woff2?oz8qsv') format('woff2'),
+    url('fonts/zorroa-icons.ttf?oz8qsv') format('truetype'),
+    url('fonts/zorroa-icons.woff?oz8qsv') format('woff'),
+    url('fonts/zorroa-icons.svg?oz8qsv#zorroa-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -196,6 +196,9 @@
 .icon-cog:before {
   content: "\e907";
 }
+.icon-stats-growth:before {
+  content: "\e960";
+}
 .icon-eyedropper:before {
   content: "\e95e";
 }
@@ -334,6 +337,9 @@
 .icon-files:before {
   content: "\e6b7";
 }
+.icon-copy:before {
+  content: "\e6b8";
+}
 .icon-folder3:before {
   content: "\e6ba";
 }
@@ -369,6 +375,9 @@
 }
 .icon-pie-chart:before {
   content: "\e7f8";
+}
+.icon-graph:before {
+  content: "\e7fa";
 }
 .icon-chart-growth:before {
   content: "\e7fb";
