--- a/src/components/Table/TableField.scss
+++ b/src/components/Table/TableField.scss
@@ -21,15 +21,25 @@
 .TableField-toggle {
   @include flexRowCenter;
   @include flexOff;
-  width: 16px;
-  height: 16px;
-  border-radius: 8px;
-  color: $zorroa-sickly-green;
-  background-color: rgba(0,0,0,0.1);
   cursor: pointer;
-  margin: 4px;
+  width: 22px;
+  height: 22px;
 
-  &:hover {
+  .TableField-toggle-icon {
+    @include flexRowCenter;
+    width: 14px;
+    height: 6px;
+    font-size: 13px;
+    border-radius: 3px;
+    color: $zorroa-sickly-green;
+    background-color: rgba(0,0,0,0.1);
+
+    .TableField-array.isOpen & {
+      transform: rotate(90deg);
+    }
+  }
+
+  &:hover .TableField-toggle-icon {
     color: $zorroa-light-green;
     background-color: $zorroa-darkgray;
   }
