--- a/src/components/Racetrack/AddWidget.scss
+++ b/src/components/Racetrack/AddWidget.scss
@@ -96,7 +96,7 @@
 
       text-align: right;
       margin-top: 8px;
-      margin-bottom: 12px;
+      margin-bottom: 4px;
       padding-left: 20px;
       padding-right: 20px;
       color: $zorroa-gray;
@@ -127,6 +127,7 @@
         background-color: white;
         margin-left: 8px;
         margin-right: 8px;
+        margin-top: 8px;
 
         .title-bar {
           @include flexRow;
