--- a/src/components/Assets/Editbar.scss
+++ b/src/components/Assets/Editbar.scss
@@ -7,6 +7,8 @@
   @include flexJustifySpaceBetween;
   @include flexAlignItemsCenter;
 
+  height: 48px;
+
   color: $zorroa-gray;
   background-color: transparent;
 
@@ -18,16 +20,12 @@
   .title {
     margin-left: 8px;
     text-transform: uppercase;
-    margin-top: 20px;
-    margin-bottom: 12px;
     @include noSelect;
   }
 
   .right-side {
     @include flexRow;
     margin-right: 12px;
-    margin-top: 20px;
-    margin-bottom: 12px;
   }
 
   .Editbar-selected {
@@ -65,6 +63,10 @@
     @include flexRow;
     @include flexAlignItemsCenter;
     cursor:pointer;
+
+    &.disabled {
+      color: $zorroa-lightgray;
+    }
 
     &:not(.disabled):hover {
       color: $zorroa-sickly-green;
