Let folder context menu escape parent overflow limits
Make context menu position:fixed

--- a/src/components/Folders/FolderItem.scss
+++ b/src/components/Folders/FolderItem.scss
@@ -122,7 +122,7 @@ $FolderItemHeight : 25px;
   @include flexCol;
   background-color: white;
   border-radius: 3px;
-  position: absolute;
+  position: fixed;
   top: 24px;
   left: 28px;
   width: 180px;
