Partial revert of fa5abe1414d5860ab6a512d2c5d1be3fb0a43da5
Back out the previous context menu "fixes" that didn't work

--- a/src/components/Folders/Folders.scss
+++ b/src/components/Folders/Folders.scss
@@ -3,7 +3,7 @@
 .Folders {
   border-bottom-right-radius: 3px;
   border-bottom-left-radius: 3px;
-  // overflow: hidden; // commented out because the folder context menu needs to show
+  overflow: hidden;
   margin-bottom: 9px;
 }
 
