Change selection and hover colors.

--- a/src/styles/core-mixins.scss
+++ b/src/styles/core-mixins.scss
@@ -42,8 +42,8 @@ $zorroa-darkwhite  : #d8d8d8;
 $zorroa-nearwhite  : #ededed;
 $zorroa-transparent: transparent;
 
-$zorroa-selected       : #D5E9BC;
-$zorroa-hover          : #C4DEA3;
+$zorroa-selected       : #D1E3F6;
+$zorroa-hover          : #C7E3A4;
 $zorroa-dropzone       : rgba(115, 182, 28, 0.75);
 
 /* shared metrics */
