--- a/src/components/Racetrack/Color.scss
+++ b/src/components/Racetrack/Color.scss
@@ -65,7 +65,7 @@
 
     &.selected {
       border: 2px solid black;
-      &.lightborder {
+      &.lightOverlay {
         border: 2px solid white;
       }
     }
@@ -86,6 +86,13 @@
     height: 40px;
     border-radius: 3px;
     border: 1px solid $zorroa-lightgray;
+
+    .Color-preview-icon {
+      color: #000;
+    }
+    &.lightOverlay .Color-preview-icon {
+      color: #fff;
+    }
   }
 
   .Color-preview-icon {
@@ -116,6 +123,33 @@
     position: relative;
   }
 
+  .Color-slider-entry {
+    .Color-slider-pct {
+      color: #000;
+      font-size: 14px;
+      padding-left: 10px;
+    }
+    &.lightOverlay .Color-slider-pct {
+      color: #fff;
+    }
+
+    .Color-slider-del {
+      width: 12px;
+      height: 12px;
+      margin: 5px;
+      border-radius: 5px;
+      color: #000;
+      background-color: $zorroa-gray;
+      border: 1px solid #000;
+      font-size: 8px;
+    }
+    &.lightOverlay .Color-slider-del {
+      color: #fff;
+      border-color: #fff;
+    }
+
+  }
+
   .Color-slider-text {
     @include flexRowCenter;
     color: $zorroa-lightgray;
@@ -144,29 +178,11 @@
     width: 100%;
   }
 
-  .Color-slider-color {
-  }
-  .Color-slider-pct {
-    color: white;
-    font-size: 14px;
-    padding-left: 10px;
-  }
   .Color-slider-resizer {
     width: 100%;
-    height: 5px;
     background-color: white;
     &:hover {
       cursor: ns-resize;
     }
-  }
-  .Color-slider-del {
-    width: 12px;
-    height: 12px;
-    margin: 5px;
-    border-radius: 5px;
-    color: white;
-    background-color: $zorroa-lightgray;
-    border: 1px solid white;
-    font-size: 9px;
   }
 }
