3-way sort cycle. select sorted headers. [Finishes #138276377][Finishes #138545377]

--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -53,6 +53,11 @@ $tableResizeRightPadding: 20px;
 
 .Table-header-cell {
   height: 100%;
+  @include flexRowCenter;
+
+  &.ordered {
+    background-color: $zorroa-selected;
+  }
 }
 
 .Table-header-sort {
