--- a/src/components/Racetrack/Facet.scss
+++ b/src/components/Racetrack/Facet.scss
@@ -71,11 +71,16 @@
     overflow: hidden;
     overflow-y: auto;
 
-    .Facet-value-table-row {
+    .Facet-value-table-row:nth-child(odd) {
+      background-color: $zorroa-nearwhite;
+    }
 
-      &.selected {
-        background-color: $zorroa-selected;
-      }
+    .Facet-value-table-row {
+      user-select: none;
+      color: $zorroa-greyish-brown;
+      &:hover { background-color: $zorroa-hover; }
+      &.selected { background-color: $zorroa-selected; }
+      &.selected:hover { background-color: $zorroa-hover; }
     }
 
     .Facet-value-table-key {
@@ -137,70 +142,69 @@
     padding-right: 10px;
   }
 
-  th {
-    padding: 8px;
-    max-width: 0; // This looks weird, but is important! It allows cells to chop content
-    @include clampText;
-  }
-
-  td {
-    padding: 0;
-    max-width: 0; // This looks weird, but is important! It allows cells to chop content
-    @include clampText;
-  }
-
-  .Table-header {
-    text-align: left;
-  }
-
-  .Table-row {
-    text-align: left;
-  }
-
-  .Table-settings {
-    width: 24px;
-    color: $zorroa-gray;
-  }
-
-  tr {
-    color: $zorroa-greyish-brown;
-  }
-
   td:last-child {
     text-align: right;
     width: 60px;
   }
 
-  th {
-    text-align: left;
-    font-family: "Roboto Condensed";
-    font-weight: 300;
-    text-transform: uppercase;
-    font-size: 12px;
-    line-height: 1;
-    color: $zorroa-gray;
-    background-color: white;
+  .Facet-value-cell {
+    padding: 0;
+    max-width: 0; // This looks weird, but is important! It allows cells to chop content
+    @include clampText;
   }
-  th:last-child {
+
+  .Facet-value-count {
+    padding: 0;
+    max-width: 0; // This looks weird, but is important! It allows cells to chop content
+    @include clampText;
+  }
+
+  .Facet-table-header {
+    @include flexRow;
+    @include flexAlignItemsCenter;
+    @include flexJustifySpaceBetween;
+    margin-bottom: 6px;
+    margin-left: 10px;
+    margin-right: 4px;
+  }
+
+  .Facet-table-header-cell {
+    @include flexRow;
+    @include flexAlignItemsCenter;
+    line-height: 1;
+  }
+
+  .Facet-table-header-cell:last-child {
     text-align: right;
     width: 60px;
   }
 
-  tr:nth-child(odd) {
-    background-color: $zorroa-nearwhite;
-  }
-
-  thead tr td th {
+  .Facet-table-header-title {
     font-size: 12px;
     text-transform: uppercase;
-    font-stretch: condensed;
-    line-height: 1;
     color: $zorroa-gray;
     background-color: white;
+    text-align: left;
+    font-family: "Roboto Condensed";
+    font-weight: 300;
   }
 
-  tbody tr:hover {
-    background-color: $zorroa-hover;
+  .Facet-table-header-count {
+    @include flexRowCenter;
+
+    width: 14px;
+    font-size: 10px;
+    color: $zorroa-lightgray;
+    padding-left: 4px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-right: 5px;
+    margin-left: 2px;
+    border-radius: 3px;
+    &:hover {
+      color: white;
+      background-color: $zorroa-sickly-green;
+    }
   }
 
   .Facet-controls {
