--- a/src/components/Racetrack/Facet.scss
+++ b/src/components/Racetrack/Facet.scss
@@ -205,12 +205,10 @@
     @include flexRowCenter;
 
     width: 14px;
+    height: 20px;
     font-size: 10px;
     color: $zorroa-lightgray;
-    padding-left: 4px;
-    padding-top: 4px;
-    padding-bottom: 4px;
-    padding-right: 5px;
+    padding-right: 2px; // This compensates for the slight offset of icon-sort*
     margin-left: 2px;
     border-radius: 3px;
     &:hover {
