Fix Video Lightbox Controls in Firefox (#271)
* Fix video controls layout in Firefox when video aspect is narrower than window. [Finishes ##138390367]

Also fix vertical centering in Chrome when video aspect is wider than window

* Fix video progress bar in firefox

Replace <progress> element with svg for better cross-browser compatability

--- a/src/components/Inspector/PanZoom.scss
+++ b/src/components/Inspector/PanZoom.scss
@@ -3,11 +3,13 @@
 .PanZoom-frame {
   @include flexCol;
   @include flexOn;
+  overflow: hidden;
 }
 
 .PanZoom {
   @include flexCol;
   @include flexOn;
+  overflow: hidden;
   position: relative;
   cursor: move; /* fallback if grab cursor is unsupported */
   cursor: grab;
