Fix Sidebar resize in Firefox
Use Resizer instead of native drag events
Add cursor:pointer to Sidebar toggle
Deselect while using resize to prevent native element/text selection

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -45,6 +45,7 @@
   color: $zorroa-lightgray;
   padding-left: 10px;
   padding-right: 10px;
+  cursor: pointer;
 
   @include flexRow;
   @include flexAlignItemsCenter;
