Revert "Update zorroa-icons (#276)" (#277)
This reverts commit 5210a1045e19fb7c6f9f6ea86f993dba5368a194.

--- a/src/assets/fonts/zorroa-icons/style.css
+++ b/src/assets/fonts/zorroa-icons/style.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'zorroa-icons';
-  src:  url('fonts/zorroa-icons.eot?5ee9n6');
-  src:  url('fonts/zorroa-icons.eot?5ee9n6#iefix') format('embedded-opentype'),
-    url('fonts/zorroa-icons.woff2?5ee9n6') format('woff2'),
-    url('fonts/zorroa-icons.ttf?5ee9n6') format('truetype'),
-    url('fonts/zorroa-icons.woff?5ee9n6') format('woff'),
-    url('fonts/zorroa-icons.svg?5ee9n6#zorroa-icons') format('svg');
+  src:  url('fonts/zorroa-icons.eot?oz8qsv');
+  src:  url('fonts/zorroa-icons.eot?oz8qsv#iefix') format('embedded-opentype'),
+    url('fonts/zorroa-icons.woff2?oz8qsv') format('woff2'),
+    url('fonts/zorroa-icons.ttf?oz8qsv') format('truetype'),
+    url('fonts/zorroa-icons.woff?oz8qsv') format('woff'),
+    url('fonts/zorroa-icons.svg?oz8qsv#zorroa-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -25,134 +25,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-map:before {
-  content: "\ea45";
-}
-.icon-equalizer2:before {
-  content: "\eb5b";
-}
-.icon-question:before {
-  content: "\e910";
-}
-.icon-film:before {
-  content: "\e931";
-}
-.icon-video:before {
-  content: "\e931";
-}
-.icon-movie:before {
-  content: "\e931";
-}
-.icon-tape:before {
-  content: "\e931";
-}
-.icon-play:before {
-  content: "\e931";
-}
-.icon-play2:before {
-  content: "\e921";
-}
-.icon-calendar:before {
-  content: "\e911";
-}
-.icon-equalizer:before {
-  content: "\e90e";
-}
-.icon-cog:before {
-  content: "\e907";
-}
-.icon-stats-growth:before {
-  content: "\e960";
-}
-.icon-eyedropper:before {
-  content: "\e95e";
-}
-.icon-import:before {
-  content: "\e95b";
-}
-.icon-spam:before {
-  content: "\e94f";
-}
-.icon-eye:before {
-  content: "\e934";
-}
-.icon-views:before {
-  content: "\e934";
-}
-.icon-vision:before {
-  content: "\e934";
-}
-.icon-visit:before {
-  content: "\e934";
-}
-.icon-file-empty:before {
-  content: "\e922";
-}
-.icon-menu:before {
-  content: "\e920";
-}
-.icon-grid:before {
-  content: "\e91f";
-}
-.icon-plus:before {
-  content: "\e91e";
-}
-.icon-cross:before {
-  content: "\e91d";
-}
-.icon-thumbs-up:before {
-  content: "\e91b";
-}
-.icon-new-tab:before {
-  content: "\e919";
-}
-.icon-cancel-circle:before {
-  content: "\e918";
-}
-.icon-arrow-right:before {
-  content: "\e916";
-}
-.icon-folder:before {
-  content: "\e914";
-}
-.icon-directory:before {
-  content: "\e914";
-}
-.icon-category:before {
-  content: "\e914";
-}
-.icon-browse:before {
-  content: "\e914";
-}
-.icon-pie-chart2:before {
-  content: "\e90f";
-}
-.icon-filter:before {
-  content: "\e90d";
-}
-.icon-arrow-down:before {
-  content: "\e909";
-}
-.icon-pen:before {
-  content: "\e908";
-}
-.icon-binoculars:before {
-  content: "\e906";
-}
-.icon-triangle-down:before {
-  content: "\e905";
-}
-.icon-search:before {
-  content: "\e904";
-}
 .icon-settings_backup_restore:before {
   content: "\e92f";
 }
 .icon-plus2:before {
   content: "\e928";
-}
-.icon-check:before {
-  content: "\e917";
 }
 .icon-brokenegg:before {
   content: "\e95f";
@@ -289,6 +166,120 @@
 .icon-tagcloud:before {
   content: "\e913";
 }
+.icon-question:before {
+  content: "\e910";
+}
+.icon-film:before {
+  content: "\e931";
+}
+.icon-video:before {
+  content: "\e931";
+}
+.icon-movie:before {
+  content: "\e931";
+}
+.icon-tape:before {
+  content: "\e931";
+}
+.icon-play:before {
+  content: "\e931";
+}
+.icon-play2:before {
+  content: "\e921";
+}
+.icon-calendar:before {
+  content: "\e911";
+}
+.icon-equalizer:before {
+  content: "\e90e";
+}
+.icon-cog:before {
+  content: "\e907";
+}
+.icon-stats-growth:before {
+  content: "\e960";
+}
+.icon-eyedropper:before {
+  content: "\e95e";
+}
+.icon-import:before {
+  content: "\e95b";
+}
+.icon-spam:before {
+  content: "\e94f";
+}
+.icon-eye:before {
+  content: "\e934";
+}
+.icon-views:before {
+  content: "\e934";
+}
+.icon-vision:before {
+  content: "\e934";
+}
+.icon-visit:before {
+  content: "\e934";
+}
+.icon-file-empty:before {
+  content: "\e922";
+}
+.icon-menu:before {
+  content: "\e920";
+}
+.icon-grid:before {
+  content: "\e91f";
+}
+.icon-plus:before {
+  content: "\e91e";
+}
+.icon-cross:before {
+  content: "\e91d";
+}
+.icon-thumbs-up:before {
+  content: "\e91b";
+}
+.icon-new-tab:before {
+  content: "\e919";
+}
+.icon-cancel-circle:before {
+  content: "\e918";
+}
+.icon-arrow-right:before {
+  content: "\e916";
+}
+.icon-folder:before {
+  content: "\e914";
+}
+.icon-directory:before {
+  content: "\e914";
+}
+.icon-category:before {
+  content: "\e914";
+}
+.icon-browse:before {
+  content: "\e914";
+}
+.icon-pie-chart2:before {
+  content: "\e90f";
+}
+.icon-filter:before {
+  content: "\e90d";
+}
+.icon-arrow-down:before {
+  content: "\e909";
+}
+.icon-pen:before {
+  content: "\e908";
+}
+.icon-binoculars:before {
+  content: "\e906";
+}
+.icon-triangle-down:before {
+  content: "\e905";
+}
+.icon-search:before {
+  content: "\e904";
+}
 .icon-sort:before {
   content: "\e94e";
 }
@@ -312,6 +303,162 @@
 }
 .icon-bar-graph:before {
   content: "\e90a";
+}
+.icon-apartment:before {
+  content: "\e60c";
+}
+.icon-pencil:before {
+  content: "\e60d";
+}
+.icon-pen2:before {
+  content: "\e60f";
+}
+.icon-palette:before {
+  content: "\e626";
+}
+.icon-trash2:before {
+  content: "\e681";
+}
+.icon-game:before {
+  content: "\e684";
+}
+.icon-star:before {
+  content: "\e68d";
+}
+.icon-star-empty:before {
+  content: "\e68f";
+}
+.icon-envelope:before {
+  content: "\e696";
+}
+.icon-file-empty2:before {
+  content: "\e6b3";
+}
+.icon-files:before {
+  content: "\e6b7";
+}
+.icon-copy:before {
+  content: "\e6b8";
+}
+.icon-folder3:before {
+  content: "\e6ba";
+}
+.icon-folder-upload:before {
+  content: "\e6bf";
+}
+.icon-register:before {
+  content: "\e6d1";
+}
+.icon-document2:before {
+  content: "\e6d9";
+}
+.icon-picture2:before {
+  content: "\e70f";
+}
+.icon-pictures:before {
+  content: "\e711";
+}
+.icon-contacts:before {
+  content: "\e71a";
+}
+.icon-telephone:before {
+  content: "\e76a";
+}
+.icon-window:before {
+  content: "\e7b2";
+}
+.icon-bubbles:before {
+  content: "\e7d7";
+}
+.icon-bubble-text:before {
+  content: "\e7db";
+}
+.icon-pie-chart:before {
+  content: "\e7f8";
+}
+.icon-graph:before {
+  content: "\e7fa";
+}
+.icon-chart-growth:before {
+  content: "\e7fb";
+}
+.icon-linearicons:before {
+  content: "\e80a";
+}
+.icon-briefcase:before {
+  content: "\e83a";
+}
+.icon-cube:before {
+  content: "\e874";
+}
+.icon-mute:before {
+  content: "\e8b4";
+}
+.icon-download2:before {
+  content: "\e8f5";
+}
+.icon-link2:before {
+  content: "\e917";
+}
+.icon-share:before {
+  content: "\e933";
+}
+.icon-zoom-in:before {
+  content: "\e925";
+}
+.icon-zoom-out:before {
+  content: "\e926";
+}
+.icon-list:before {
+  content: "\e92c";
+}
+.icon-list4:before {
+  content: "\e930";
+}
+.icon-cross2:before {
+  content: "\e935";
+}
+.icon-chevron-down:before {
+  content: "\e93a";
+}
+.icon-chevrons-expand-vertical:before {
+  content: "\e93d";
+}
+.icon-arrow-down2:before {
+  content: "\e942";
+}
+.icon-arrow-divert:before {
+  content: "\e948";
+}
+.icon-expand3:before {
+  content: "\e951";
+}
+.icon-layers:before {
+  content: "\e977";
+}
+.icon-plus-square:before {
+  content: "\e98e";
+}
+.icon-minus-square:before {
+  content: "\e98f";
+}
+.icon-menu-square:before {
+  content: "\e99b";
+}
+.icon-sort-alpha-asc:before {
+  content: "\e9b5";
+}
+.icon-sort-alpha-desc:before {
+  content: "\e9b6";
+}
+.icon-sort-time-asc:before {
+  content: "\e9bb";
+}
+.icon-sort-time-desc:before {
+  content: "\e9bc";
+}
+.icon-hand:before {
+  content: "\e9bf";
 }
 .icon-layout:before {
   content: "\e900";
