--- a/src/assets/fonts/zorroa-icons/style.css
+++ b/src/assets/fonts/zorroa-icons/style.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'zorroa-icons';
-  src:  url('fonts/zorroa-icons.eot?oz8qsv');
-  src:  url('fonts/zorroa-icons.eot?oz8qsv#iefix') format('embedded-opentype'),
-    url('fonts/zorroa-icons.woff2?oz8qsv') format('woff2'),
-    url('fonts/zorroa-icons.ttf?oz8qsv') format('truetype'),
-    url('fonts/zorroa-icons.woff?oz8qsv') format('woff'),
-    url('fonts/zorroa-icons.svg?oz8qsv#zorroa-icons') format('svg');
+  src:  url('fonts/zorroa-icons.eot?ungl2s');
+  src:  url('fonts/zorroa-icons.eot?ungl2s#iefix') format('embedded-opentype'),
+    url('fonts/zorroa-icons.woff2?ungl2s') format('woff2'),
+    url('fonts/zorroa-icons.ttf?ungl2s') format('truetype'),
+    url('fonts/zorroa-icons.woff?ungl2s') format('woff'),
+    url('fonts/zorroa-icons.svg?ungl2s#zorroa-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -30,6 +30,9 @@
 }
 .icon-plus2:before {
   content: "\e928";
+}
+.icon-check:before {
+  content: "\e961";
 }
 .icon-brokenegg:before {
   content: "\e95f";
@@ -168,6 +171,15 @@
 }
 .icon-question:before {
   content: "\e910";
+}
+.icon-map:before {
+  content: "\ea45";
+}
+.icon-equalizer2:before {
+  content: "\eb5b";
+}
+.icon-stack-empty:before {
+  content: "\ed3b";
 }
 .icon-film:before {
   content: "\e931";
@@ -390,6 +402,9 @@
 }
 .icon-cube:before {
   content: "\e874";
+}
+.icon-site-map:before {
+  content: "\e883";
 }
 .icon-mute:before {
   content: "\e8b4";
