Switch to plain check with background color and no border-radius. [Finishes #137315039]

--- a/src/components/Thumb/Thumb.scss
+++ b/src/components/Thumb/Thumb.scss
@@ -94,11 +94,12 @@
     top: 0;
     left: 0;
     font-size: 16px;
-    border-radius: 3px;
-    background-color: white;
     color: $zorroa-gray;
+    margin: -1px;         // Avoid white outline
+    padding: 3px;
     &.isSelected {
-      color: $zorroa-sickly-green;
+      color: white;
+      background-color: $zorroa-sickly-green;
     }
   }
 }
