Small fixes from multipage PR (#289)
* Fix Facet warnings.

* Fix Video.scss syntax error.

--- a/src/components/Inspector/Video.scss
+++ b/src/components/Inspector/Video.scss
@@ -46,7 +46,7 @@
   .Video-progress-bar {
     @include fullWidth;
     @include flexOff;
-    @include flexRowCenter
+    @include flexRowCenter;
 
     position: relative;
     top: 0;
